# DiscriminatEA

./: .gitignore  README.md  docker-requirements.txt  pyproject.toml  requirements.txt  test_kg_similarity.py
discriminatEA/: CSLS_.py  main_discriminatEA.py  model.py  predict_alignment.py  produce_embedding.py  utils.py
discriminatEA/feature_perprocessing/longterm/: node2vec.py
discriminate_ea/: main_discriminatEA.py  model.py  predict_alignment.py  produce_embedding.py
discriminate_ea/feature_perprocessing/: get_deep_emb.py
discriminate_ea/feature_perprocessing/longterm/: main.py
launchers/launcher_predict_alignment/: docker-compose-yml  sbatch.sh
launchers/launcher_pretrain_model/: docker-compose-yml  sbatch.sh
launchers/launcher_produce_embeddings/: docker-compose.yaml  sbatch.sh
result/: icews_wiki_result_file_mlp.txt  sample_dataset_result_file_mlp.txt
simple_hhea/: main_SimpleHHEA.py  model.py  predict_alignment.py  process_name_embedding.py  process_type_embedding.py  utils.py
simple_hhea/feature_perprocessing/: preproccess.py
