[tool.poetry]
name = "simple_hhea"
version = "1.1.2"
description = "Entity alignment on highly heterogeneous knowledge graphs."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
transformers = "*"
sentencepiece = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
networkx = "*"
gensim = "*"
torch = {version = "^2.7.1", source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 